-margin top bcus fixed menu caused overlap needed to move down

--- a/public/css/materialize/style.css
+++ b/public/css/materialize/style.css
@@ -98,3 +98,7 @@ footer.page-footer {
   margin-right: 0px;
   width: 100%
 }
+
+.container {
+  margin-top: 50px;
+}
